modifiedstack.yml


AWSTemplateFormatVersion : 2010-09-09
Description : This template creates basic Infrastructure 
Metadata : {}
Conditions : {}
Parameters :
    Environment :
        Description: Select the stage of project.
        Type : String
        AllowedValues :
            - dev
            - qa
            - prod
    InstanceType :
        Description : Select intance type based on your project
        Type : String
        AllowedValues :
          - t1.micro
          - t2.2xlarge
          - t2.large 
          - t2.medium
          - t2.micro 
          - t2.nano 
          - t2.small 
          - t2.xlarge 
    VpcCidr :
        Description : Vpc Cidr range for New Vpc.
        Type : String
        AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
        ConstraintDescription : CidrBlock must be in the form of x.x.x.x/16-24 
    SubnetCidr :
        Description : Subenet Cidr range for subnets
        Type: String
        AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
        ConstraintDescription: CidrBlock must be in the form of x.x.x.x/16-24
    SubnetCidr1 :
        Description : Subenet Cidr range for subnets
        Type: String
        AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
        ConstraintDescription: CidrBlock must be in the form of x.x.x.x/16-24
Resources:
    MyVPC:
        Type: AWS::EC2::VPC
        Properties : 
            CidrBlock : 
                Ref : VpcCidr
            EnableDnsHostnames : true
            EnableDnsSupport : true
            InstanceTenancy : default
            Tags :
             -  Key : Name
                Value : PublicVpc
    
    Subnet :
        Type : AWS::EC2::Subnet
        Properties : 
            VpcId : 
                Ref : MyVPC
            CidrBlock : 
                Ref: SubnetCidr
            AvailabilityZone : us-east-1a
            MapPublicIpOnLaunch: true
            Tags : 
             -  Key : Name
                Value : PublicSubnet   
                
    Subnet1 : 
        Type : AWS::EC2::Subnet
        Properties :
            VpcId : 
                Ref : MyVPC                
            CidrBlock : 
                Ref : SubnetCidr1
            AvailabilityZone : us-east-1b
            Tags :
             -  Key : Name
                Value : PrivateSubnet
    InternetGateway : 
        Type : AWS::EC2::InternetGateway
        Properties : 
            Tags : 
             -  Key : Name
                Value : IGW
    ElasticIpAddress :
        Type : AWS::EC2::EIP
        DependsOn : InternetGateway
        Properties :
            Domain : vpc
    NatGateway : 
        Type : AWS::EC2::NatGateway
        Properties :
            AllocationId : !GetAtt ElasticIpAddress.AllocationId
            SubnetId : 
                Ref : Subnet
                
    AttachGateway : 
        Type : AWS::EC2::VPCGatewayAttachment
        Properties :
            VpcId : 
                Ref : MyVPC
            InternetGatewayId : 
                Ref : InternetGateway 
    RouteTable : 
        Type : AWS::EC2::RouteTable
        Properties : 
            VpcId : 
                Ref : MyVPC   
            Tags : 
             -  Key : Name
                Value : PublicRouteTable
    NatRouteTable :
        Type : AWS::EC2::RouteTable
        Properties : 
            VpcId :
                Ref : MyVPC
            Tags :
              - Key : Name
                Value : NatRouteTable
                
    Route :
        Type : AWS::EC2::Route
        DependsOn : InternetGateway
        Properties :
            RouteTableId : 
                Ref : RouteTable
                
            GatewayId : 
                Ref : InternetGateway
                
            DestinationCidrBlock : 0.0.0.0/0
    NatRoute :
        Type : AWS::EC2::Route
        DependsOn : NatGateway
        Properties :
            RouteTableId : 
                Ref : NatRouteTable
            NatGatewayId : 
                Ref : NatGateway
            DestinationCidrBlock : 11.0.0.0/8    
            
    SubnetRouteTableAssociation : 
        Type : AWS::EC2::SubnetRouteTableAssociation
        Properties :
            RouteTableId : 
                Ref : RouteTable

            SubnetId : 
                Ref : Subnet
    
    SubnetNatTableAssociation : 
        Type : AWS::EC2::SubnetRouteTableAssociation
        Properties :
            RouteTableId : 
                Ref : NatRouteTable

            SubnetId : 
                Ref : Subnet1
                
            
    SecurityGroup : 
        Type : AWS::EC2::SecurityGroup
        Properties :
            GroupDescription : Security Group for whole stack with SSh,HTTp and HTTPS ports.
            GroupName : DevSecurityGroup
            VpcId : 
                Ref : MyVPC
            SecurityGroupIngress:
              - IpProtocol: tcp
                FromPort: 22
                ToPort: 22
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 443
                ToPort: 443
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 80
                ToPort: 80
                CidrIp: 0.0.0.0/0  
            SecurityGroupEgress:
              - IpProtocol: tcp
                FromPort: 80
                ToPort: 80
                CidrIp: 0.0.0.0/0
            Tags :
              - Key: Name
                Value: DevSecurityGroup
              - Key: stack
                Value: Dev

    PublicWebServer :
        Type : AWS::EC2::Instance
        Properties :
            ImageId : ami-00874d747dde814fa
            InstanceType : 
                Ref : InstanceType
            KeyName : ubuntujp
            Monitoring: true
            SecurityGroupIds:
               - Ref: SecurityGroup
            SubnetId: 
                Ref : Subnet
            UserData :
              Fn::Base64: !Sub |
                  #!/bin/bash -xe
                  sudo apt update
                  sudo apt install nginx -y
                  sudo systemctl start nginx.service
                  sudo systemctl enable nginx
            Tags :
              - Key : Name
                Value : NginxServer
              - Key : stack
                Value : Dev
    
    PrivateWebServer :
        Type : AWS::EC2::Instance
        Properties :
            ImageId : ami-00874d747dde814fa
            InstanceType : 
                Ref : InstanceType
            KeyName : ubuntujp
            Monitoring: true
            SecurityGroupIds:
               - Ref: SecurityGroup
            SubnetId: 
                Ref : Subnet1
            UserData :
              Fn::Base64: !Sub |
                  #!/bin/bash -xe
                  sudo apt update
                  sudo apt install httpd -y
                  sudo systemctl start httpd.service
                  sudo systemctl enable httpd
            Tags :
              - Key : Name
                Value : HttpdServer
              - Key : stack
                Value : Dev
            
            

Outputs : 
    VPCId : 
        Description : Vpcid of new vpc
        Value : 
            Ref : MyVPC
            
    Subnet :
        Description : Id of subnet
        Value : 
            Ref : Subnet
            
    Subnet1 :
        Description : id of subnet
        Value : 
            Ref : Subnet1
